--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -744,7 +744,7 @@ a {
 }
 .cid-s48OLK6784 .dropdown-menu,
 .cid-s48OLK6784 .navbar.opened {
-  background: #ffffff !important;
+  background: #48d5b5 !important;
 }
 .cid-s48OLK6784 .nav-item:focus,
 .cid-s48OLK6784 .nav-link:focus {
@@ -779,7 +779,7 @@ a {
   min-height: 77px;
   transition: all .3s;
   border-bottom: 1px solid transparent;
-  background: #ffffff;
+  background: #48d5b5;
 }
 .cid-s48OLK6784 .navbar:not(.navbar-short) {
   border-bottom: 1px solid #e6e6e6;
@@ -918,7 +918,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-s48OLK6784 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #48d5b5;
 }
 .cid-s48OLK6784 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1023,7 +1023,7 @@ a {
 .cid-t9C7Q9BYlp {
   padding-top: 6rem;
   padding-bottom: 2rem;
-  background-color: #ffffff;
+  background-color: #48d5b5;
 }
 .cid-t9C7Q9BYlp .mbr-fallback-image.disabled {
   display: none;
@@ -1051,7 +1051,7 @@ a {
 .cid-t9C7VOQ7xW {
   padding-top: 0rem;
   padding-bottom: 2rem;
-  background-color: #ffffff;
+  background-color: #48d5b5;
 }
 .cid-t9C7VOQ7xW .mbr-fallback-image.disabled {
   display: none;
@@ -1068,10 +1068,16 @@ a {
 .cid-t9C7VOQ7xW .mbr-section-subtitle DIV {
   text-align: left;
 }
+.cid-t9C7VOQ7xW .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-t9C7VOQ7xW .mbr-section-title {
+  color: #ffffff;
+}
 .cid-s48P1Icc8J {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #232323;
+  background-color: #00a88f;
 }
 .cid-s48P1Icc8J .row-links {
   width: 100%;
